--- a/hugo.toml
+++ b/hugo.toml
@@ -4,24 +4,24 @@ title = 'My Notes'
 theme ='PaperMod'
 
 params:
-  defaultTheme: auto # dark, light
-  comments: true
-  hideSummary: true
+  defaultTheme = auto # dark, light
+  comments = true
+  hideSummary = true
 
 profileMode:
-    enabled: false # needs to be explicitly set
-    title: ExampleSite
-    subtitle: "This is subtitle"
-    imageUrl: "https://twitter.com/rjhann_/photo"
-    imageWidth: 120
-    imageHeight: 120
-    imageTitle: my image
+    enabled = false # needs to be explicitly set
+    title = ExampleSite
+    subtitle = "This is subtitle"
+    imageUrl = "https://twitter.com/rjhann_/photo"
+    imageWidth = 120
+    imageHeight = 120
+    imageTitle = my image
     buttons:
-      - name: Posts
-        url: posts
-      - name: Tags
-        url: tags
+      - name = Posts
+        url = posts
+      - name = Tags
+        url = tags
     
 socialIcons:
-    - name: twitter
-      url: "https://twitter.com/rjhann_"
+    - name = twitter
+      url = "https://twitter.com/rjhann_"
