--- a/hugo.yml
+++ b/hugo.yml
@@ -1,24 +1,40 @@
 baseURL: "https://ross-hann.github.io/notes/"
-title: My Notes
+languageCode: en-us
+title: my notes
 theme: PaperMod
 
+enableEmoji: true
+
 params:
+  author: ross hann
+  homeInfoParams:
+    Title: "my notes"
+    Content: >
+      Welcome to **my notes** 🙂
+
   defaultTheme: auto # dark, light
   comments: true
   hideSummary: true
 
-profileMode:
-  enabled: true 
-  imageUrl: "https://twitter.com/rjhann_/photo"
-  imageWidth: 120
-  imageHeight: 120
-  imageTitle: my image
-  buttons:
-    - name: Posts
-      url: posts
-    - name: Tags
-      url: tags
+  profileMode:
+    enabled: true 
+    imageUrl: "https://twitter.com/rjhann_/photo"
+    imageWidth: 120
+    imageHeight: 120
+    imageTitle: my image
+    buttons:
+      - name: Posts
+        url: posts
+      - name: Tags
+        url: tags
     
-socialIcons:
+  socialIcons:
     - name: twitter
       url: "https://twitter.com/rjhann_"
+
+  menu:
+    main:
+      - identifier: categories
+        name: Categories
+        url: /categories/
+        weight: 10
